--- a/RecipeApp/app/build.gradle
+++ b/RecipeApp/app/build.gradle
@@ -47,7 +47,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     //gson
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
